# Posit-Numerical-Library

./: CMakeLists.txt  README.md  setup.sh
include/: positWrapperC.h
src/: positWrapperC.cpp
